test/core/errors/constants_error/zs/constant_0xffff_error.zs
package constant_0xffff_error;

const int16 WRONG_CONSTANT = 0xFFFF;
